deploy/gitops/environments/staging/gateway/httproute-fts.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fts
spec:
  parentRefs:
    - name: dep-dlm-staging-gateway
  hostnames:
    - fts.dep-dlm-staging.example.com
  rules:
    - backendRefs:
        - name: fts
          port: 8446
